@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

hide circle
hide methods

title US017 - Domain Model
class Address{
streetAddress
zipCode
}

class State{
stateName
}

class District{
districtName
}

class City{
cityName
}

class Agent{
name
phoneNumber
emailAddress
pass
}

class Employee{
name
emailAddress
phoneNumber
}

@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype dashed

'left to right direction

hide circle
hide methods

title US017 - Domain Model

class Deal{
date
acceptedOrder
}

class Store{
designation
phoneNumber
emailAddress
ID
}

class Address{
streetAddress
doorNumber
floorNumber
zipCode
}

class State{
stateName
}

class District{
districtName
}

class City{
cityName
}

class NetworkManager{
}

class Employee{
name
emailAddress
phoneNumber
}

class Agent{}


Store "1" -- Address : has >
Address -- City : has >
City -- District : is in >
District -- State : is in >
NetworkManager --- "1...*" Deal : lists >
NetworkManager --|> Employee : is >
Agent ---|> Employee : is >
Agent "1" -- "0...*" Deal : sets >
Agent -- Store : works for >
NetworkManager "1" --- "1...*" Store : manages >

@enduml